[tu] removes non-function code for preceding [an] adds error ana results for gpt4o

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -11,8 +11,8 @@
    "id": "39fe33c2-aafc-46f2-91ee-655a59a4d22f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:28.486631Z",
-     "start_time": "2024-06-24T22:12:28.472031Z"
+     "end_time": "2024-06-24T22:57:45.851033Z",
+     "start_time": "2024-06-24T22:57:45.839204Z"
     }
    },
    "source": [
@@ -33,26 +33,26 @@
     "import utils as ut"
    ],
    "outputs": [],
-   "execution_count": 304
+   "execution_count": 364
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:28.867830Z",
-     "start_time": "2024-06-24T22:12:28.860374Z"
+     "end_time": "2024-06-24T22:57:46.178595Z",
+     "start_time": "2024-06-24T22:57:46.169476Z"
     }
    },
    "cell_type": "code",
    "source": "#TODO Label rewriting could be simplified",
    "id": "fadacde859a7f171",
    "outputs": [],
-   "execution_count": 305
+   "execution_count": 365
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:28.933616Z",
-     "start_time": "2024-06-24T22:12:28.916601Z"
+     "end_time": "2024-06-24T22:57:46.239689Z",
+     "start_time": "2024-06-24T22:57:46.228926Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
    ],
    "id": "c5f34cfa6a15aa0a",
    "outputs": [],
-   "execution_count": 306
+   "execution_count": 366
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:29.122407Z",
-     "start_time": "2024-06-24T22:12:29.100035Z"
+     "end_time": "2024-06-24T22:57:46.361759Z",
+     "start_time": "2024-06-24T22:57:46.339915Z"
     }
    },
    "cell_type": "code",
@@ -77,19 +77,20 @@
     "res_main_dir = \"/opt/storage/projects/o/pp7_llm/outputs/model_responses/gpt\"\n",
     "md_file = cf.metadata_file\n",
     "md_df = pd.read_csv(md_file, sep=\"\\t\")\n",
+    "ana_dir = cf.error_analysis_dir\n",
     "\n",
     "# color scheme for confusion matrices based on model name \n",
     "clrmap_dict = {\"gpt-4o\": \"Greens\", \"gpt-35-turbo\": \"Blues\"}"
    ],
    "id": "6b48abf9dc64ac07",
    "outputs": [],
-   "execution_count": 307
+   "execution_count": 367
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:29.198375Z",
-     "start_time": "2024-06-24T22:12:29.180348Z"
+     "end_time": "2024-06-24T22:57:46.484061Z",
+     "start_time": "2024-06-24T22:57:46.467410Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +109,7 @@
    ],
    "id": "7542b171be221454",
    "outputs": [],
-   "execution_count": 308
+   "execution_count": 368
   },
   {
    "metadata": {},
@@ -119,8 +120,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:29.326808Z",
-     "start_time": "2024-06-24T22:12:29.310365Z"
+     "end_time": "2024-06-24T22:57:46.543809Z",
+     "start_time": "2024-06-24T22:57:46.528673Z"
     }
    },
    "cell_type": "code",
@@ -129,12 +130,13 @@
     "  \"\"\"\n",
     "  Evaluate humor judgement results for a directory.\n",
     "\n",
-    "  Return\n",
-    "      (dict): With keys as follows\n",
-    "              \"sys_orig\": original system results before label postprocessing\n",
-    "              \"sys_res\": system results after preprocessing\n",
-    "              \"ref_res\": reference results\n",
-    "              \"cm\": plain text confusion matrix\n",
+    "  Return:\n",
+    "      dict\n",
+    "      With keys as follows:\n",
+    "          \"sys_orig\": original system results before label postprocessing\n",
+    "          \"sys_res\": system results after preprocessing\n",
+    "          \"ref_res\": reference results\n",
+    "          \"cm\": plain text confusion matrix\n",
     "  \"\"\"\n",
     "  assert color_mode in clrmap_dict\n",
     "  sys_jmt, sys_jmt_no_postpro = ut.get_judgement_info_for_dir(res_dir)\n",
@@ -151,13 +153,13 @@
    ],
    "id": "48f575e7c7fa7881",
    "outputs": [],
-   "execution_count": 309
+   "execution_count": 369
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.064988Z",
-     "start_time": "2024-06-24T22:12:29.438196Z"
+     "end_time": "2024-06-24T22:57:47.177589Z",
+     "start_time": "2024-06-24T22:57:46.673880Z"
     }
    },
    "cell_type": "code",
@@ -179,13 +181,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 310
+   "execution_count": 370
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.560374Z",
-     "start_time": "2024-06-24T22:12:30.071158Z"
+     "end_time": "2024-06-24T22:57:47.699204Z",
+     "start_time": "2024-06-24T22:57:47.183631Z"
     }
    },
    "cell_type": "code",
@@ -207,7 +209,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 311
+   "execution_count": 371
   },
   {
    "metadata": {},
@@ -218,80 +220,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.684425Z",
-     "start_time": "2024-06-24T22:12:30.563877Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "bad_centuries = []\n",
-    "bad_authors = []\n",
-    "bad_idx = []\n",
-    "print(\"\\t\".join(str(x) for x in (\"idx\", \"rr\", \"sr\", \"century\", \"author\", \"title\")))\n",
-    "\n",
-    "for idx, (sr, rr) in enumerate(zip(res_35[\"sys_res\"], res_35[\"ref_res\"])):\n",
-    "  if rr != sr:\n",
-    "    century = md_df.loc[md_df['id'] == idx + 1, 'centuryBirth'].iat[0]\n",
-    "    author = md_df.loc[md_df['id'] == idx + 1, 'author'].iat[0]\n",
-    "    title = md_df.loc[md_df['id'] == idx + 1, 'title'].iat[0]\n",
-    "    bad_centuries.append(century)\n",
-    "    bad_authors.append(author)\n",
-    "    bad_idx.append(idx + 1)\n",
-    "    print(\"\\t\".join(str(x) for x in (idx+1, rr, sr, century, author, title)))"
-   ],
-   "id": "631a28c0f63d234c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "idx\trr\tsr\tcentury\tauthor\ttitle\n",
-      "3\tcomic\tother\t20\tJon Juaristi\tPatria mía\n",
-      "8\tother\tcomic\t20\tJon Juaristi\tCarta en Noviembre\n",
-      "11\tcomic\tother\t20\tJon Juaristi\tA Vinogrado, avinagrado\n",
-      "12\tother\tcomic\t17\tMatías Frigola y Picón\tA la muerte del doctor Juan Pérez de Montalbán\n",
-      "21\tcomic\tother\t19\tManuel del Palacio\tSoneto filosófico\n",
-      "26\tother\tcomic\t16\tCamila Lucinda\tAl peregrino\n",
-      "28\tother\tcomic\t19\tEmilio Mora\tTempestades\n",
-      "29\tother\tcomic\t19\tManuel del Palacio\tSin esperanza\n",
-      "30\tother\tcomic\t18\tJuan Meléndez Valdés\tLas armas del amor\n",
-      "33\tother\tcomic\t16\tLuis Vélez de Guevara\tDe su comedia Celos, amor y venganza\n",
-      "34\tother\tcomic\t16\tFrancisco de Figueroa\tSoneto\n",
-      "36\tother\tcomic\t16\tFrancisco de Terrazas\tSoñé que una piedra me arrojaba\n",
-      "40\tother\tcomic\t19\tFrancisco Javier Ugarte y Pages\tTu mirada\n",
-      "42\tother\tcomic\t19\tJulio Herrera y Reissig\tEl granjero\n",
-      "44\tother\tcomic\t19\tManuel José Othón\tIdilio salvaje – IV\n",
-      "45\tother\tcomic\t19\tManuel José Othón\tRetrato\n",
-      "47\tother\tcomic\t19\tJacinto Verdaguer\tLadrar a la luna\n",
-      "48\tother\tcomic\t19\tJosé Gonzalo Roldán\tSoñar y amar\n",
-      "49\tother\tcomic\t19\tRubén Darío\tMELANCOLÍA\n",
-      "50\tother\tcomic\t19\tRubén Darío\tSONETO AUTUMNAL AL MARQUÉS DE BRADOMÍN\n",
-      "51\tcomic\tother\t19\tManuel del Palacio\tLa erupción\n",
-      "78\tother\tcomic\t19\tManuel Bernabé\tA LAONG - LAAN\n",
-      "79\tother\tcomic\t17\tJuan Francisco Andrés\tA Raimundo de Peñafort\n",
-      "80\tother\tcomic\t17\tFrancisco de Sigüenza\tSoneto\n",
-      "81\tother\tcomic\t17\tJuan Francisco de Prado\tA San Isidro\n",
-      "83\tother\tcomic\t19\tAntonio Ros de Olano\tRegalando una botlla de vino añejo\n",
-      "84\tother\tcomic\t19\tRosario («Crisantema») Sansores\tLa casada\n",
-      "86\tother\tcomic\t16\tFrancisco de Terrazas\tSoñé que una piedra me arrojaba\n",
-      "88\tother\tcomic\t19\tMelchor Palau y Català\tSonetos – IV\n",
-      "89\tother\tcomic\t16\tLuis Martín de la Plaza\tSoneto\n",
-      "90\tother\tcomic\t19\tManuel Gutiérrez Nájera\tLa mariposa y el árbol\n",
-      "92\tother\tcomic\t17\tJuan de San Martín\tSoneto\n",
-      "94\tother\tcomic\t19\tManuel Reina\tLa perla\n",
-      "95\tother\tcomic\t19\tConcepción Robles\tYo he leído\n",
-      "99\tother\tcomic\t19\tFernando Maristany\tJean Vauquelin de la Fresnaye\n",
-      "100\tother\tcomic\t19\tEsther Lucila Vázquez\tRosas\n"
-     ]
-    }
-   ],
-   "execution_count": 312
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.728658Z",
-     "start_time": "2024-06-24T22:12:30.691963Z"
+     "end_time": "2024-06-24T22:57:47.768005Z",
+     "start_time": "2024-06-24T22:57:47.729796Z"
     }
    },
    "cell_type": "code",
@@ -323,13 +253,13 @@
    ],
    "id": "946137e58d3785b5",
    "outputs": [],
-   "execution_count": 313
+   "execution_count": 373
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.843649Z",
-     "start_time": "2024-06-24T22:12:30.733345Z"
+     "end_time": "2024-06-24T22:57:47.888559Z",
+     "start_time": "2024-06-24T22:57:47.772435Z"
     }
    },
    "cell_type": "code",
@@ -380,13 +310,13 @@
      ]
     }
    ],
-   "execution_count": 314
+   "execution_count": 374
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.887430Z",
-     "start_time": "2024-06-24T22:12:30.848395Z"
+     "end_time": "2024-06-24T22:57:47.933336Z",
+     "start_time": "2024-06-24T22:57:47.892946Z"
     }
    },
    "cell_type": "code",
@@ -399,18 +329,18 @@
        "Counter({19: 21, 16: 6, 17: 5, 20: 3, 18: 1})"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 315
+   "execution_count": 375
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.906670Z",
-     "start_time": "2024-06-24T22:12:30.891488Z"
+     "end_time": "2024-06-24T22:57:47.954746Z",
+     "start_time": "2024-06-24T22:57:47.938649Z"
     }
    },
    "cell_type": "code",
@@ -451,18 +381,18 @@
        "         'Esther Lucila Vázquez': 1})"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 316
+   "execution_count": 376
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.926647Z",
-     "start_time": "2024-06-24T22:12:30.911351Z"
+     "end_time": "2024-06-24T22:57:47.976927Z",
+     "start_time": "2024-06-24T22:57:47.960065Z"
     }
    },
    "cell_type": "code",
@@ -574,18 +504,18 @@
        " 'comic']"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 317
+   "execution_count": 377
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.944904Z",
-     "start_time": "2024-06-24T22:12:30.930729Z"
+     "end_time": "2024-06-24T22:57:47.993476Z",
+     "start_time": "2024-06-24T22:57:47.982231Z"
     }
    },
    "cell_type": "code",
@@ -607,13 +537,13 @@
    ],
    "id": "f2e3dc64fd04ce4b",
    "outputs": [],
-   "execution_count": 318
+   "execution_count": 378
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:30.996133Z",
-     "start_time": "2024-06-24T22:12:30.953522Z"
+     "end_time": "2024-06-24T22:57:48.056495Z",
+     "start_time": "2024-06-24T22:57:48.004674Z"
     }
    },
    "cell_type": "code",
@@ -677,7 +607,7 @@
     "          #   and only the two errors below are possible\n",
     "          assert jmt_from_eval_rw in (\"comic\", \"other\") and \\\n",
     "                 ref_res_rw in (\"comic\", \"other\") and \\\n",
-    "                 jmt_from_eval_rw != ref_res_rw\n",
+    "                 jmt_from_eval_rw != ref_res_rw, f\" MRFI: {mrfi} jmt_from_eval_rw: [{jmt_from_eval_rw}]; ref_res_rw: [{ref_res_rw}]\"\n",
     "          if jmt_from_eval_rw == \"comic\" and ref_res_rw == \"other\":\n",
     "            oufi_partial = oufi_fp\n",
     "          elif jmt_from_eval_rw == \"other\" and ref_res_rw == \"comic\":\n",
@@ -693,13 +623,13 @@
    ],
    "id": "fba087a8d57babe0",
    "outputs": [],
-   "execution_count": 319
+   "execution_count": 379
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:12:31.553231Z",
-     "start_time": "2024-06-24T22:12:31.005068Z"
+     "end_time": "2024-06-24T22:57:48.587622Z",
+     "start_time": "2024-06-24T22:57:48.062242Z"
     }
    },
    "cell_type": "code",
@@ -709,7 +639,44 @@
    ],
    "id": "afada7506590530",
    "outputs": [],
-   "execution_count": 320
+   "execution_count": 380
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T23:04:31.766401Z",
+     "start_time": "2024-06-24T23:04:31.521301Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# analyze results for gpt-4o\n",
+    "bad_idx4, bad_centuries4, bad_authors4 = get_error_case_idx_and_metadata(res_4o, md_df)\n",
+    "analyze_results(res_4o, model_4o_res_dir, ana_dir, bad_idx4, md_df, \"gpt4\")"
+   ],
+   "id": "de60e73c13143b84",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "idx\trr\tsr\tcentury\tauthor\ttitle\n",
+      "3\tcomic\tother\t20\tJon Juaristi\tPatria mía\n",
+      "9\tcomic\tother\t19\tManuel Bernabé\tLASTICO-SEXUAL\n",
+      "10\tcomic\tother\t19\tMelchor Jufré del Águila\tSONETO\n",
+      "11\tcomic\tother\t20\tJon Juaristi\tA Vinogrado, avinagrado\n",
+      "13\tcomic\tother\t19\tBlas Sirvent\tSoneto\n",
+      "18\tcomic\tother\t19\tMiguel Agustín Príncipe\tUna mañana fresca, paseando\n",
+      "60\tcomic\tother\t19\tManuel del Palacio\tTrabajo perdido\n",
+      "64\tcomic\tother\t19\tManuel del Palacio\tUn amigo residente en Roma\n",
+      "67\tcomic\tother\t19\tManuel del Palacio\tA un pobre rico\n",
+      "70\tcomic\tother\t16\tJuan de Tassis y Peralta, Conde de Villamediana\tJosefa Vaca, comedianta\n",
+      "71\tcomic\tother\t16\tJuan de Tassis y Peralta, Conde de Villamediana\tA una academia que se hizo en casa de Antonio de Vega, confeso\n",
+      "74\tcomic\tother\t16\tJuan de Tassis y Peralta, Conde de Villamediana\tA Jorge de Tovar\n"
+     ]
+    }
+   ],
+   "execution_count": 382
   }
  ],
  "metadata": {
