[an] adds author comparison

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -677,6 +677,331 @@
     }
    ],
    "execution_count": 382
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Author comparison",
+   "id": "c542b96d445d9b05"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T23:45:03.609109Z",
+     "start_time": "2024-06-24T23:45:03.601582Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from scipy.stats import pearsonr, spearmanr",
+   "id": "22da6f256bdc411d",
+   "outputs": [],
+   "execution_count": 410
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T23:50:00.695993Z",
+     "start_time": "2024-06-24T23:50:00.260083Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "reload(ut)\n",
+    "ainfo = ut.get_author_info_for_dir(model_35_res_dir)\n",
+    "au_matches = 0\n",
+    "century_matches = 0\n",
+    "century_diffs = []\n",
+    "for ke, va in ainfo.items():\n",
+    "  poem_id = re.search(r\"_(\\d+)_\", ke).group(1)\n",
+    "  assert poem_id is not None\n",
+    "  poem_id = int(poem_id)\n",
+    "  author_ref = md_df.loc[md_df['id'] == poem_id, 'author'].iat[0]\n",
+    "  century_ref = md_df.loc[md_df['id'] == poem_id, 'centuryBirth'].iat[0]\n",
+    "  au_match = 1 if va[0] == author_ref else 0\n",
+    "  century_match = 1 if va[1] == century_ref else 0\n",
+    "  au_matches += au_match\n",
+    "  century_matches += century_match\n",
+    "  century_diff = abs(va[1] - century_ref)\n",
+    "  century_diffs.append(century_diff)\n",
+    "  print(f\"{va[0]}\\t{author_ref}\\t{au_match}\\t{va[1]}\\t{century_ref}\\t{century_match}\\t{century_diff}\")\n",
+    "print(f\"Total author matches: {au_matches} ({100*(au_matches/len(ainfo))}%)\")\n",
+    "print(f\"Total century matches: {century_matches} ({100*(century_matches/len(ainfo))}%)\")\n",
+    "print(f\"Mean century difference: {np.mean(century_diffs)} ({np.std(century_diffs)})\")\n",
+    "\n",
+    "centuries_sys = [va[1] for va in ainfo.values()]\n",
+    "centuries_ref = [md_df.loc[md_df['id'] == int(re.search(r\"_(\\d+)_\", ke).group(1)), 'centuryBirth'].iat[0] for ke in ainfo.keys()]\n",
+    "\n",
+    "print(\"Pearson r\", pearsonr(centuries_sys, centuries_ref))\n",
+    "print(\"Spearman r\", spearmanr(centuries_sys, centuries_ref))"
+   ],
+   "id": "4a771c071f5f7716",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delmira Agustini\tConcepción Robles\t0\t20\t19\t0\t1\n",
+      "Amado Nervo\tManuel Reina\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo\tMiguel de Cervantes\t0\t16\t16\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tFrancisco de Sigüenza\t0\t17\t17\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tArturo Reyes\t0\t19\t19\t1\t0\n",
+      "Gutierre de Cetina\tMarqués de Santillana\t0\t16\t14\t0\t2\n",
+      "Garcilaso de la Vega\tLuis Barahona de Soto\t0\t16\t16\t1\t0\n",
+      "Miguel Sánchez-Ostiz\tJon Juaristi\t0\t20\t20\t1\t0\n",
+      "Francisco de Quevedo\tPedro de Quirós\t0\t17\t16\t0\t1\n",
+      "Ricardo Jaimes Freyre\tJulio Flores Roa\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo\tManuel del Palacio\t0\t17\t19\t0\t2\n",
+      "Sor Juana Inés de la Cruz\tBlas Sirvent\t0\t17\t19\t0\t2\n",
+      "Ramón de Campoamor y Campoosorio\tAugusto E. Madan\t0\t19\t19\t1\t0\n",
+      "Rafael Alberti\tMariano Álvarez Robles\t0\t20\t19\t0\t1\n",
+      "Manuel Machado\tMiguel Ramos Carrión\t0\t20\t19\t0\t1\n",
+      "Amado Nervo\tNicolás Arnao\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo\tFrancisco de Quevedo\t1\t17\t16\t0\t1\n",
+      "Miguel de Unamuno\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Federico García Lorca\tJulio Herrera y Reissig\t0\t20\t19\t0\t1\n",
+      "Garcilaso de la Vega\tFrancisco de Figueroa\t0\t16\t16\t1\t0\n",
+      "Manuel Machado\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Manuel José Quintana\tJosé Gonzalo Roldán\t0\t19\t19\t1\t0\n",
+      "Francisco de Aldana\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Ramón de Campoamor\tEnrique Sierra Valenzuela\t0\t19\t19\t1\t0\n",
+      "Rubén Darío\tManuel José Othón\t0\t20\t19\t0\t1\n",
+      "Sor Juana Inés de la Cruz\tCamila Lucinda\t0\t17\t16\t0\t1\n",
+      "Salvador Rueda\tManuel Bernabé\t0\t19\t19\t1\t0\n",
+      "José Hierro\tJon Juaristi\t0\t20\t20\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tMiguel Agustín Príncipe\t0\t17\t19\t0\t2\n",
+      "Manuel Machado Ruano\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Sor Juana Inés de la Cruz\tJuan de San Martín\t0\t17\t17\t1\t0\n",
+      "Manuel González Prada\tJosé Joaquín Olmedo\t0\t19\t18\t0\t1\n",
+      "Francisco de Quevedo y Villegas\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Luis de Góngora\tJuan Francisco Andrés\t0\t16\t17\t0\t1\n",
+      "Francisco de Quevedo y Villegas\tMiguel de Cervantes\t0\t17\t19\t0\t2\n",
+      "Amado Nervo\tJosé Selgas y Carrasco\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tMelchor Palau y Català\t0\t16\t19\t0\t3\n",
+      "Alfonsina Storni\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Garcilaso de la Vega\tFrancisco de Terrazas\t0\t16\t16\t1\t0\n",
+      "Luis de Góngora y Argote\tManuel del Palacio\t0\t16\t19\t0\t3\n",
+      "Miguel de Unamuno\tJon Juaristi\t0\t19\t20\t0\t1\n",
+      "Amado Nervo\tRosario («Crisantema») Sansores\t0\t20\t19\t0\t1\n",
+      "Gabriela Mistral\tManuel Gutiérrez Nájera\t0\t21\t19\t0\t2\n",
+      "Rubén Darío\tAugusto E. Madan\t0\t19\t19\t1\t0\n",
+      "Manuel Bretón de los Herreros\tAnónimo\t0\t19\t19\t1\t0\n",
+      "Manuel Machado\tJuan Martínez Villergas\t0\t20\t19\t0\t1\n",
+      "Amado Nervo\tMercedes de Velilla Rodríguez\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo\tManuel del Palacio\t0\t17\t19\t0\t2\n",
+      "José de Espronceda\tBlas Sirvent\t0\t19\t19\t1\t0\n",
+      "Federico García Lorca\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Amado Nervo\tNuma Pompilio Llona\t0\t20\t19\t0\t1\n",
+      "Sor Juana Inés de la Cruz\tManuel del Palacio\t0\t17\t19\t0\t2\n",
+      "Manuel Machado\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tWenceslao Ayguals de Izco\t0\t17\t19\t0\t2\n",
+      "Gustavo Adolfo Bécquer\tJulián del Casal\t0\t19\t19\t1\t0\n",
+      "Gutierre de Cetina\tJuan Meléndez Valdés\t0\t16\t18\t0\t2\n",
+      "Lope de Vega\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tLuis Martín de la Plaza\t0\t17\t16\t0\t1\n",
+      "Francisco de Quevedo y Villegas\tJuan de Arguijo\t0\t16\t19\t0\t3\n",
+      "Francisco de Quevedo y Villegas\tSimón Villalobos Benavides y Calatayud\t0\t16\t17\t0\t1\n",
+      "Manuel Gutiérrez Nájera\tRubén Darío\t0\t19\t19\t1\t0\n",
+      "Fray Luis de León\tJosé Francisco de Isla, «Padre Isla»\t0\t16\t18\t0\t2\n",
+      "Amado Nervo\tMercedes Matamoros\t0\t20\t19\t0\t1\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Amado Nervo\tEsther Lucila Vázquez\t0\t20\t19\t0\t1\n",
+      "Manuel Acuña\tEmilio Mora\t0\t19\t19\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Ramón María del Valle-Inclán\tRubén Darío\t0\t20\t19\t0\t1\n",
+      "Gustavo Adolfo Bécquer\tJosé Campo Moreno\t0\t19\t19\t1\t0\n",
+      "Julio Herrera y Reissig\tFernando Maristany\t0\t20\t19\t0\t1\n",
+      "Fray Luis de León\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Ricardo Palma\tManuel Bretón de los Herreros\t0\t19\t19\t1\t0\n",
+      "Manuel María Flores\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Lope de Vega\tJuan Francisco de Prado\t0\t16\t17\t0\t1\n",
+      "Amado Nervo\tManuel José Othón\t0\t20\t19\t0\t1\n",
+      "Manuel Machado\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Fernando María Guerrero\tManuel Bernabé\t0\t19\t19\t1\t0\n",
+      "Luis de Góngora y Argote\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Manuel Machado\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Manuel Benítez Carrasco\tJoaquín Sabina\t0\t20\t20\t1\t0\n",
+      "Luis de Góngora y Argote\tJuan Bautista de Mesa\t0\t17\t17\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tMatías Frigola y Picón\t0\t17\t17\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tJerónimo de Lomas Cantoral\t0\t17\t16\t0\t1\n",
+      "Gutierre de Cetina\tMelchor Jufré del Águila\t0\t16\t19\t0\t3\n",
+      "Amado Nervo\tJacinto Verdaguer\t0\t20\t19\t0\t1\n",
+      "Pedro Calderón de la Barca\tLuis Vélez de Guevara\t0\t17\t16\t0\t1\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Gutierre de Cetina\tJuan Meléndez Valdés\t0\t16\t18\t0\t2\n",
+      "Manuel Machado\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Rubén Darío\tManuel Bernabé\t0\t19\t19\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tAntonio Ros de Olano\t0\t17\t19\t0\t2\n",
+      "Francisco de Quevedo\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Bartolomé Cairasco de Figueroa\tCarlos de la Coba Machicao\t0\t16\t16\t1\t0\n",
+      "Ramón López Velarde\tFrancisco Javier Ugarte y Pages\t0\t20\t19\t0\t1\n",
+      "Lope de Vega\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Garcilaso de la Vega\tFrancisco de Terrazas\t0\t16\t16\t1\t0\n",
+      "Total author matches: 1 (1.0%)\n",
+      "Total century matches: 41 (41.0%)\n",
+      "Mean century difference: 0.8 (0.8124038404635961)\n",
+      "Pearson r PearsonRResult(statistic=0.7171168554910093, pvalue=4.7814198285458175e-17)\n",
+      "Spearman r SignificanceResult(statistic=0.7025903084290568, pvalue=3.7408209297702535e-16)\n"
+     ]
+    }
+   ],
+   "execution_count": 415
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T23:49:33.158751Z",
+     "start_time": "2024-06-24T23:49:32.697336Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "reload(ut)\n",
+    "ainfo = ut.get_author_info_for_dir(model_4o_res_dir)\n",
+    "au_matches = 0\n",
+    "century_matches = 0\n",
+    "century_diffs = []\n",
+    "for ke, va in ainfo.items():\n",
+    "  poem_id = re.search(r\"_(\\d+)_\", ke).group(1)\n",
+    "  assert poem_id is not None\n",
+    "  poem_id = int(poem_id)\n",
+    "  author_ref = md_df.loc[md_df['id'] == poem_id, 'author'].iat[0]\n",
+    "  century_ref = md_df.loc[md_df['id'] == poem_id, 'centuryBirth'].iat[0]\n",
+    "  au_match = 1 if va[0] == author_ref else 0\n",
+    "  century_match = 1 if va[1] == century_ref else 0\n",
+    "  au_matches += au_match\n",
+    "  century_matches += century_match\n",
+    "  century_diff = abs(va[1] - century_ref)\n",
+    "  century_diffs.append(century_diff)\n",
+    "  print(f\"{va[0]}\\t{author_ref}\\t{au_match}\\t{va[1]}\\t{century_ref}\\t{century_match}\\t{century_diff}\")\n",
+    "print(f\"Total author matches: {au_matches} ({100*(au_matches/len(ainfo))}%)\")\n",
+    "print(f\"Total century matches: {century_matches} ({100*(century_matches/len(ainfo))}%)\")\n",
+    "print(f\"Mean century difference: {np.mean(century_diffs)} ({np.std(century_diffs)})\")\n",
+    "\n",
+    "centuries_sys = [va[1] for va in ainfo.values()]\n",
+    "centuries_ref = [md_df.loc[md_df['id'] == int(re.search(r\"_(\\d+)_\", ke).group(1)), 'centuryBirth'].iat[0] for ke in ainfo.keys()]\n",
+    "\n",
+    "print(\"Pearson r\", pearsonr(centuries_sys, centuries_ref))\n",
+    "print(\"Spearman r\", spearmanr(centuries_sys, centuries_ref))"
+   ],
+   "id": "661f5024d5f462b9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ángel González Muñiz\tJon Juaristi\t0\t20\t20\t1\t0\n",
+      "Cristóbal de Castillejo\tManuel del Palacio\t0\t16\t19\t0\t3\n",
+      "Manuel del Palacio\tEnrique Sierra Valenzuela\t0\t19\t19\t1\t0\n",
+      "Gabriela Mistral\tFrancisco Javier Ugarte y Pages\t0\t20\t19\t0\t1\n",
+      "Pedro Calderón de la Barca\tManuel del Palacio\t0\t17\t19\t0\t2\n",
+      "Ricardo Palma\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Francisca Herrera Garrido\tNicolás Arnao\t0\t20\t19\t0\t1\n",
+      "Ramón de Campoamor y Campoosorio\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tJosé Gonzalo Roldán\t0\t19\t19\t1\t0\n",
+      "Jorge Luis Borges\tJulio Herrera y Reissig\t0\t20\t19\t0\t1\n",
+      "Bartolomé Cairasco de Figueroa\tCarlos de la Coba Machicao\t0\t16\t16\t1\t0\n",
+      "Rubén Darío\tAugusto E. Madan\t0\t20\t19\t0\t1\n",
+      "Manuel Bretón de los Herreros\tJosé Campo Moreno\t0\t19\t19\t1\t0\n",
+      "Dulce María Loynaz\tConcepción Robles\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo y Villegas\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Ramón de Campoamor y Campoosorio\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Francisco de Quevedo\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Lope de Vega\tJuan Francisco de Prado\t0\t17\t17\t1\t0\n",
+      "Carolina Coronado\tEmilio Mora\t0\t19\t19\t1\t0\n",
+      "Ángela Figuera Aymerich\tManuel Gutiérrez Nájera\t0\t20\t19\t0\t1\n",
+      "Manuel del Palacio\tJacinto Verdaguer\t0\t19\t19\t1\t0\n",
+      "Ramón de Campoamor y Campoosorio\tManuel Reina\t0\t19\t19\t1\t0\n",
+      "Enrique Jardiel Poncela\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Francisco de Quevedo y Villegas\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Luis de Góngora y Argote\tMiguel de Cervantes\t0\t17\t19\t0\t2\n",
+      "Sor Juana Inés de la Cruz\tJuan de San Martín\t0\t17\t17\t1\t0\n",
+      "Ángel Urrutia Iturbe\tJon Juaristi\t0\t20\t20\t1\t0\n",
+      "Julio Flórez\tRosario («Crisantema») Sansores\t0\t20\t19\t0\t1\n",
+      "Manuel del Palacio\tMiguel Agustín Príncipe\t0\t19\t19\t1\t0\n",
+      "Rubén Darío\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Gaspar Melchor de Jovellanos\tJosé Francisco de Isla, «Padre Isla»\t0\t18\t18\t1\t0\n",
+      "José Martí\tFernando Maristany\t0\t19\t19\t1\t0\n",
+      "Delmira Agustini\tMercedes Matamoros\t0\t20\t19\t0\t1\n",
+      "Ramón de Campoamor\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Ramón María del Valle-Inclán\tBlas Sirvent\t0\t20\t19\t0\t1\n",
+      "Sor Juana Inés de la Cruz\tJuan Francisco Andrés\t0\t17\t17\t1\t0\n",
+      "Salvador Díaz Mirón\tManuel Bretón de los Herreros\t0\t19\t19\t1\t0\n",
+      "Rubén Darío\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tJerónimo de Lomas Cantoral\t0\t17\t16\t0\t1\n",
+      "Íñigo López de Mendoza, Marqués de Santillana\tMarqués de Santillana\t0\t15\t14\t0\t1\n",
+      "Juana Inés de la Cruz\tSimón Villalobos Benavides y Calatayud\t0\t17\t17\t1\t0\n",
+      "Ramón de Campoamor y Campoosorio\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Félix Lope de Vega y Carpio\tMiguel de Cervantes\t0\t16\t16\t1\t0\n",
+      "Delmira Agustini\tManuel José Othón\t0\t20\t19\t0\t1\n",
+      "Salvador Díaz Mirón\tNuma Pompilio Llona\t0\t19\t19\t1\t0\n",
+      "Ramón de Campoamor y Campoosorio\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Garcilaso de la Vega\tJuan Meléndez Valdés\t0\t16\t18\t0\t2\n",
+      "Ramón de Campoamor y Campoosorio\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Ramón de Campoamor\tJuan Martínez Villergas\t0\t19\t19\t1\t0\n",
+      "Eugenio Noel\tBlas Sirvent\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tPedro de Quirós\t0\t16\t16\t1\t0\n",
+      "Guillermo Valencia Castillo\tJulián del Casal\t0\t20\t19\t0\t1\n",
+      "Pedro Muñoz Seca\tMariano Álvarez Robles\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tFrancisco de Figueroa\t0\t16\t16\t1\t0\n",
+      "Emilia Pardo Bazán\tEsther Lucila Vázquez\t0\t19\t19\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Francisco de Asís de Icaza y Beña\tAugusto E. Madan\t0\t19\t19\t1\t0\n",
+      "Nicomedes Santa Cruz\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "Félix Lope de Vega y Carpio\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Rosalía de Castro\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Juan Boscán\tCamila Lucinda\t0\t16\t16\t1\t0\n",
+      "Garcilaso de la Vega\tFrancisco de Terrazas\t0\t16\t16\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tFrancisco de Sigüenza\t0\t17\t17\t1\t0\n",
+      "Miguel de Unamuno\tJon Juaristi\t0\t20\t20\t1\t0\n",
+      "Manuel Machado\tMiguel Ramos Carrión\t0\t20\t19\t0\t1\n",
+      "José Cadalso y Vázquez\tManuel del Palacio\t0\t18\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t16\t16\t1\t0\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Juan de Arguijo\tJuan Meléndez Valdés\t0\t17\t18\t0\t1\n",
+      "Garcilaso de la Vega\tLuis Martín de la Plaza\t0\t16\t16\t1\t0\n",
+      "Francisco de Quevedo y Villegas\tFrancisco de Quevedo\t0\t17\t16\t0\t1\n",
+      "Leopoldo Lugones\tRubén Darío\t0\t20\t19\t0\t1\n",
+      "Rubén Darío\tManuel Bernabé\t0\t20\t19\t0\t1\n",
+      "Sor Juana Inés de la Cruz\tAntonio Ros de Olano\t0\t17\t19\t0\t2\n",
+      "Carolina Coronado\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Rubén Darío\tManuel del Palacio\t0\t20\t19\t0\t1\n",
+      "José Joaquín de Olmedo\tJosé Joaquín Olmedo\t0\t19\t18\t0\t1\n",
+      "Garcilaso de la Vega\tFrancisco de Terrazas\t0\t16\t16\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tLuis Vélez de Guevara\t0\t17\t16\t0\t1\n",
+      "José Martí\tJosé Selgas y Carrasco\t0\t19\t19\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tMatías Frigola y Picón\t0\t17\t17\t1\t0\n",
+      "José Palma\tManuel Bernabé\t0\t19\t19\t1\t0\n",
+      "Francisco de Quevedo y Villegas\tJuan de Arguijo\t0\t17\t19\t0\t2\n",
+      "Francisco de Quevedo y Villegas\tMelchor Jufré del Águila\t0\t17\t19\t0\t2\n",
+      "Ramón de Campoamor y Campoosorio\tAnónimo\t0\t19\t19\t1\t0\n",
+      "Garcilaso de la Vega\tLuis Barahona de Soto\t0\t16\t16\t1\t0\n",
+      "Julio Sesto\tJulio Flores Roa\t0\t20\t19\t0\t1\n",
+      "Gustavo Adolfo Bécquer\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Joan Manuel Serrat\tJoaquín Sabina\t0\t20\t20\t1\t0\n",
+      "Francisco de Quevedo\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Rubén Darío\tRubén Darío\t1\t20\t19\t0\t1\n",
+      "José Martí\tArturo Reyes\t0\t19\t19\t1\t0\n",
+      "Sor Juana Inés de la Cruz\tJuan Bautista de Mesa\t0\t17\t17\t1\t0\n",
+      "Félix Lope de Vega y Carpio\tMelchor Palau y Català\t0\t17\t19\t0\t2\n",
+      "Rubén Darío\tManuel del Palacio\t0\t19\t19\t1\t0\n",
+      "Delmira Agustini\tManuel José Othón\t0\t20\t19\t0\t1\n",
+      "Delmira Agustini\tMercedes de Velilla Rodríguez\t0\t20\t19\t0\t1\n",
+      "Luis Carlos López\tManuel Bernabé\t0\t20\t19\t0\t1\n",
+      "Luis de Góngora y Argote\tJuan de Tassis y Peralta, Conde de Villamediana\t0\t17\t16\t0\t1\n",
+      "Joaquín María Bartrina y de Aixemús\tWenceslao Ayguals de Izco\t0\t19\t19\t1\t0\n",
+      "Total author matches: 1 (1.0%)\n",
+      "Total century matches: 52 (52.0%)\n",
+      "Mean century difference: 0.57 (0.6671581521648371)\n",
+      "Pearson r PearsonRResult(statistic=0.8176926550984065, pvalue=3.064844034070262e-25)\n",
+      "Spearman r SignificanceResult(statistic=0.7793593745832911, pvalue=1.3008453264019653e-21)\n"
+     ]
+    }
+   ],
+   "execution_count": 414
   }
  ],
  "metadata": {
